# mcp-oci

./: .dockerignore  .env.example  .env.local.example  .env.sample  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_UPGRADE_SUMMARY.md  BUILD_FIXES.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DIRECT_API_VS_SDK_ANALYSIS.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FINAL_ARCHITECTURE_SUMMARY.md  FINOPSAI_INTEGRATION_PLAN.md  GEMINI.md  IMPLEMENTATION_PLAN.md  LOGAN_EXADATA_QUERIES.md  MCP_SERVERS_FIXED.md  Makefile  OBSERVABILITY_FIXES.md  OBSERVABILITY_STACK_STATUS.md  OCI_COST_TESTING_GUIDE.md  OPENTELEMETRY_MCP_ENHANCEMENT.md  PORT_3000_CONFLICT_RESOLVED.md  PROJECT_STATUS.md  README.md  REST_API_IMPLEMENTATION_COMPLETE.md  REST_API_MIGRATION_GUIDE.md  SERVER_STARTUP_FIX.md  SIMPLIFIED_IMPLEMENTATION_SUMMARY.md  SKILL.md  cleanup-for-git.sh  (+33 more)
.github/workflows/: ci.yml  integration.yml  secret-scan.yml
archive/: DEPLOYMENT_SUMMARY.md  ENHANCEMENT_SUMMARY.md  PHASE4_SUMMARY.md  PHASE9_SUMMARY.md
configs/: claude-desktop-config.json
configs/connections/: cloud.json  local.json
deploy/k8s/: gateway-configmap.yaml  gateway-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  oci-config.yaml  server-deployment.yaml
docs/: BUILD_MCP_SERVER.md  BUILD_OCI_AGENTS.md  INDIVIDUAL_SERVERS.md  LOCAL_CACHE_ENHANCEMENT.md  MCP_SERVERS_REFERENCE.md  OBSERVABILITY_INTEGRATION.md  OCI_OPERATIONS_AGENT.md  SERVERS.md  SETUP_VALIDATION.md  UX_OVERVIEW.md  compute-instance-optimization.md  configuration.md  deployment-guide.md  docusaurus.config.js  index.md  integrations.md  macos-observability-setup.md  oci-mcp-knowledge-base.md  sidebars.js  telemetry.md  tenancy-discovery.md  troubleshooting.md
docs/clients/: claude-desktop.md  cline.md  cursor.md  overview.md
docs/deployment/: linux_install.md  oci.md
docs/development/: architecture.md  conventions.md  fastmcp.md  server-dev-guide.md  testing.md
docs/docusaurus/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/howto/: cost-analysis.md  rate-cards.md
docs/runbooks/: README.md  agents.md  blockstorage.md  compute.md  cost.md  db.md  inventory.md  loadbalancer.md  loganalytics.md  network.md  objectstorage.md  observability.md  security.md  unified.md
docs/servers/: agents.md  apigateway.md  blockstorage.md  budgets.md  compute.md  cost.md  database.md  db.md  dns.md  events.md  filestorage.md  functions.md  iam.md  introspect.md  inventory.md  kms.md  limits.md  loadbalancer.md  loganalytics.md  loganalytics_enhanced.md  logging.md  monitoring.md  network.md  networking.md  objectstorage.md  observability.md  oke.md  ons.md  osub.md  overview.md  resourcemanager.md  security.md  streaming.md  unified.md  usageapi.md  vault.md
docs/templates/: README_SERVER.md
evaluations/: compute_evaluation.xml  cost_evaluation.xml  database_evaluation.xml  network_evaluation.xml  observability_evaluation.xml  security_evaluation.xml
legacy_src/mcp_oci_apigateway/: README.md
legacy_src/mcp_oci_blockstorage/: README.md  __main__.py
legacy_src/mcp_oci_budgets/: README.md  server.py
legacy_src/mcp_oci_compute/: README.md  __main__.py
legacy_src/mcp_oci_database/: __main__.py
legacy_src/mcp_oci_dns/: README.md
legacy_src/mcp_oci_events/: README.md
legacy_src/mcp_oci_fastmcp/: blockstorage.py  database.py  database_optimized.py  functions.py  functions_optimized.py  iam.py  loadbalancer.py  monitoring.py  oke.py  oke_optimized.py  server.py  server_proper.py  shared_architecture.py  usageapi.py  vault.py
legacy_src/mcp_oci_fastmcp_optimized/: __init__.py  __main__.py  iam.py  loganalytics.py
legacy_src/mcp_oci_fastmcp_rest/: __init__.py  __main__.py  objectstorage.py
legacy_src/mcp_oci_filestorage/: __main__.py
legacy_src/mcp_oci_functions/: README.md  __main__.py
legacy_src/mcp_oci_iam/: README.md  __init__.py  server.py  server_optimized.py
legacy_src/mcp_oci_inventory/: server.py
mcp_oci_common/: __init__.py  cache.py  config.py  local_cache.py  name_registry.py  observability.py  oci_apm.py  otel.py  otel_mcp.py  privacy.py  response.py  session.py  smart_resolver.py  validation.py
mcp_servers/: __init__.py
obs_app/: app.py  telemetry.py
ops/: COST_SERVER_FIXES.md  HEALTH_CHECK_REPORT.md  MCP_HEALTH.json  OBSERVABILITY.md  README.md  docker-compose.yml  generate_test_data.py  get_mtd_cost.py  inventory_list_instances.py  la_sources_last_24h.md  la_sources_last_24h.py  la_sources_last_24h_scan.py  la_sources_last_60m.md  la_sources_last_60m.py  la_sources_last_60m_async.py  la_sources_last_60m_scan.py  la_sources_last_day.md  la_sources_last_day_robust.py  la_sources_last_day_simple.py  la_sources_last_month.py  mtd_cost.json  restart_observability_stack.sh  run-cpu-table.py  run-local.sh  run-ux-local.sh  secret_scan.json  setup-complete-observability.sh  smoke_test_mcp.py  start-observability.sh  test-cost-server-fixes.py  test-la.py  test-mcp-metrics.sh  test-mcp-telemetry.py  test-observability.sh  test-pyroscope-connection.sh  test_observability_server.py  test_otel_enhancement.py  validate-cost-fixes.sh
scripts/: ARCHIVED.md  CACHE_QUICKSTART.md  bootstrap.sh  build-local-cache.py  ci_doc_check.sh  context7_fetch_docs.sh  create_tables.py  db_create_tables.sql  deploy-oci.sh  deploy.sh  deploy_aiops_agent.sh  deploy_full_aiops.sh  evaluation.py  generate_wallet.py  init_tenancy_discovery.py  install.sh  install_claude_config.sh  install_prereqs_linux.sh  populate_db_from_mcp.py  provision_ajd.py  smoke_check.py  start-observability-macos.sh  test_db_connection.py  test_integration_frankfurt.sh  validate_tools.py  vendor_oracle_examples.sh  verify_oci_list_calls.sh  warm_after_deploy.py  warm_registry.py
tests/: __init__.py  conftest.py
ux/: app.py
verifications/: adbs.debug  adbs.json  compute.debug  compute.json  compute_inventory.err  db_systems.debug  db_systems.json  summary.txt
web3_ux/: server.py
(+365 files in other folders)
