[tool.poetry]
name = "mcp-oci"
version = "0.1.0"
description = "Oracle Cloud Infrastructure MCP Servers for AI and Observability"
authors = [ "Abir Zu <abirzu@example.com>" ]
readme = "README.md"
packages = [{include = "mcp_servers"}, {include = "mcp_oci_common"}]

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = "*"  # For MCP/STDIO
typer = "*"    # For CLI
pydantic = "*"
tenacity = "*"
jinja2 = "*"
numpy = "^2.1.1"
pandas = "^2.2.3"
scipy = "^1.14.1"

# Optional dependencies for different features
oci = { version = "*", optional = true }  # Official OCI SDK
fastapi = { version = "*", optional = true }
uvicorn = { version = "*", optional = true }
streamlit = { version = "*", optional = true }
prometheus-client = { version = "*", optional = true }
opentelemetry-sdk = { version = "*", optional = true }
opentelemetry-api = { version = "*", optional = true }
opentelemetry-exporter-otlp = { version = "*", optional = true }
opentelemetry-instrumentation-fastapi = { version = "^0.58b0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
requests = "*"  # For testing observability endpoints
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
requests = "*"  # Required for observability pipeline tests

[tool.poetry.extras]
oci = ["oci"]
web = ["fastapi", "uvicorn"]
ui = ["streamlit"]
observability = [
    "prometheus-client",
    "opentelemetry-sdk",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi"
]
all = [
    "oci",
    "fastapi",
    "uvicorn",
    "streamlit",
    "prometheus-client",
    "opentelemetry-sdk",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
