[project]
name = "mcp-server-oci"
version = "2.0.0"
description = "Professional OCI MCP Server with FastMCP - Oracle Cloud Infrastructure management via Model Context Protocol"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Adrian Birzu", email = "adibirzu@gmail.com" }
]
keywords = ["oci", "oracle", "cloud", "mcp", "ai", "llm", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.14.1",
    "oci>=2.164.2",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
]

[project.scripts]
oci-mcp = "mcp_server_oci.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_oci"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = false
warn_unused_ignores = false

# Ignore missing stubs for untyped libraries
[[tool.mypy.overrides]]
module = [
    "oci.*",
    "oracledb.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
